--- a/HW13.html
+++ b/HW13.html
@@ -126,6 +126,7 @@
             if (field.kind !== 'submit') {
                 const formLabel = document.createElement('label');
                 formLabel.textContent = field.label;
+                formLabel.htmlFor = field.name;
                 formLabel.classList.add('fieldName');
                 fieldDiv.appendChild(formLabel);
             }
@@ -159,14 +160,14 @@
                         field.variants.forEach((item, index) => {
                             const elem = document.createElement('label');
                             elem.textContent = field.variants[index].text;
-                            elem.for = `${elem.name}-${elem.value}`;
+                            elem.htmlFor = `${field.name}-${item.value}`;
 
                             const radioElem = document.createElement('input');
                             radioElem.classList.add('radioValue');
                             radioElem.type = 'radio';
                             radioElem.value = field.variants[index].value;
                             radioElem.name = field.name;
-                            radioElem.id = `${elem.name}-${elem.value}`;
+                            radioElem.id = `${field.name}-${item.value}`;
                             elem.appendChild(radioElem);
 
                             result.appendChild(elem);
