--- a/HW13.html
+++ b/HW13.html
@@ -200,8 +200,7 @@
                         break;
                     case 'submit':
                         result = document.createElement('button');
-                        result.name = 'singlebutton';
-                        result.id = 'singlebutton';
+                        result.type = 'submit';
                         result.textContent = field.label;
                 }
                 return result;
