--- a/HW15.html
+++ b/HW15.html
@@ -17,18 +17,21 @@
             width: 200px;
             height: 100px;
             background: darkred;
+            display: inline-block;
         }
 
         .elem2 {
             width: 150px;
             height: 150px;
             background: blue;
+            display: inline-block;
         }
 
         .elem3 {
             width: 200px;
             height: 200px;
             background: green;
+            display: inline-block;
         }
 
         .positioned {
@@ -62,20 +65,30 @@
 
     const elems = Array.from(container.children);
 
-    elems.forEach(elem => {
+    elems.reverse().forEach(elem => {
+        const coords = elem.getBoundingClientRect();
+        elem.style.left = coords.left + 'px';
+        elem.style.top = coords.top + 'px';
+        elem.classList.add('positioned');
+
         elem.addEventListener('mouseover', event => event.target.classList.add('grab'));
-        elem.addEventListener('mouseout', event => event.target.classList.remove('grab'));
+        elem.addEventListener('mouseout', removeGrabbing);
         elem.addEventListener('mousedown', down);
+
     });
+
+    function removeGrabbing (event) {
+        event.target.classList.remove('grab');
+        event.target.removeEventListener('mouseout', removeGrabbing);
+    }
 
     function down(event) {
         const elem = event.target;
+        container.append(elem);
 
-        const coords = elem.getBoundingClientRect();
-        const shiftX = event.clientX - coords.left;
-        const shiftY = event.clientY - coords.top;
+        const shiftX = event.clientX - parseInt(elem.style.left);
+        const shiftY = event.clientY - parseInt(elem.style.top);
 
-        elem.classList.add('positioned');
         elem.classList.add('scaleble');
         container.addEventListener('mousemove', move);
         container.addEventListener('mouseup', up);
@@ -87,6 +100,7 @@
 
         function up() {
             container.removeEventListener('mousemove', move);
+            container.removeEventListener('mouseup', up);
             elem.classList.remove('scaleble');
         }
 
@@ -94,7 +108,6 @@
             return false;
         };
     }
-
 
 </script>
 </body>
